Page par défaut changée pour: ListeDestinations (pour développement)

--- a/index.htm
+++ b/index.htm
@@ -80,7 +80,7 @@
         <div id="bodyDestinations">
             <router-link :to="{ name: 'accueil'}">
                 <div id="logo">
-                    <img src="../images/logos/13EM_Logo_White_Blue.png" alt="13e LOGO">
+                    <img src="images/logos/13EM_Logo_White_Blue.png" alt="13e LOGO">
                 </div>
             </router-link>
             <main id="main_lesDestinations">
