Page accueil : version mobile finale

--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
                     </div>
                     <div>
                         <h1>2</h1>
-                        <div class="boxShadow">EN APPRENDRE PLUS SUR LE VOYAGE QUI VOUS ATTIRE</div>
+                        <div class="boxShadow">EN APPRENDRE PLUS SUR UN VOYAGE</div>
                         <div>
                             <div class="boxShadow" id="icon_activites"></div>
                             <div class="boxShadow" id="icon_services"></div>
