--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <head>
     <title>Le 13e mois</title>
     <meta charset='UTF-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta name="description" content="Le 13e mois est un site de réservation de voyage dans un endroit paradisiaque pendant 1 mois.">
