--- a/index.htm
+++ b/index.htm
@@ -34,6 +34,7 @@
                     <div>OIS</div>
                 </h1>
             </div>
+            <div id="fondBlanc"></div>
             <router-link :to="{ name: 'accueil'}">
                 <div id="logo">
                     <img src="images/logos/13EM_Logo_White_Blue.png" alt="13e LOGO">
