--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 
 <head>
     <title>Le 13e mois</title>
+    <meta name="author" content="Lucas Theillet">
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"">
     <link rel=" stylesheet" type="text/css" href="css/reset.css">
